@@ -2,6 +2,9 @@ package top.syshub.accountsx.core.accounts.model.context;
 
 import java.net.IDN;
 import java.net.URI;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -9,9 +12,11 @@ import java.util.Set;
 public interface SkinURLVerifier {
     boolean isSkinURLSecure(URI uri);
 
+    Set<String> ALLOWED_SCHEMES = Collections.unmodifiableSet(new HashSet<String>(Arrays.asList("http", "https")));
+
     SkinURLVerifier MOJANG_DEFAULT = ofDomainVerifier(
-            List.of(".minecraft.net", ".mojang.com"),
-            List.of("bugs.mojang.com", "education.minecraft.net", "feedback.minecraft.net")
+            Arrays.asList(".minecraft.net", ".mojang.com"),
+            Arrays.asList("bugs.mojang.com", "education.minecraft.net", "feedback.minecraft.net")
     );
 
     static SkinURLVerifier ofOperationOR(SkinURLVerifier v1, SkinURLVerifier v2) {
@@ -20,17 +25,6 @@ public interface SkinURLVerifier {
 
     static SkinURLVerifier ofDomainVerifier(List<String> allowedDomains, List<String> blockedDomains) {
         return new SkinURLVerifier() {
-            private static final Set<String> ALLOWED_SCHEMES = Set.of("http", "https");
-
-            private static boolean isDomainOnList(final String domain, final List<String> list) {
-                for (final String entry : list) {
-                    if (domain.endsWith(entry)) {
-                        return true;
-                    }
-                }
-                return false;
-            }
-
             @Override
             public boolean isSkinURLSecure(URI uri) {
                 String scheme = uri.getScheme();
@@ -48,5 +42,14 @@ public interface SkinURLVerifier {
                 return isDomainOnList(decodedDomain, allowedDomains) && !isDomainOnList(decodedDomain, blockedDomains);
             }
         };
+    }
+
+    static boolean isDomainOnList(final String domain, final List<String> list) {
+        for (final String entry : list) {
+            if (domain.endsWith(entry)) {
+                return true;
+            }
+        }
+        return false;
     }
 }
